--- a/behind_the_scenes.Rmd
+++ b/behind_the_scenes.Rmd
@@ -12,22 +12,25 @@ output:
 
 # Introduction
 
-Computer Science is a field that is growing rapidly in the United States and around the world today. Advancements in computer science from industry are constantly being released and technology is becoming more ingrained into our daily lives. The increasing demand of computer scientists had caused the occupation to grow in popularity. To meet the demand, educational institutions and systems are increasing the amount of courses offered in order to train more future computer scientists. This development started at the college level, where majoring in computer science is becoming a widely available option. At Macalester College, it is one of the largest departments for both students and faculty. While the availability of courses at the college level is an amazing start, there is a big push to have computer sciences courses offered in K-12 education. Offering computer science courses in elementary and secondary schools provides an opportunity for kids to expose themselves to coding. This could lead younger students to discover new interests and get engaged with computer science earlier. Often, being exposed to computer science at a younger age can make students more comfortable with the material and the field later on. This can lead to a more empowered and diverse set of students entering the workforce or higher education. Given the importance of having computer science courses available in K-12 education, we decided to explore the availability of computer science courses in K-12 school districts in Minnesota. For our Advanced Data Science final project, we will explore the connection between a variety of datasets related to this topic, including K-12 computer science course availability in Minnesota, demographic information from the U.S. census, ACT scores, and funding.
+Computer science is a field that is growing rapidly in the United States and around the world today. Industry is constantly releasing advancements in computer science and technology is becoming more ingrained into our daily lives with each passing day. Therefore, with an increase in technology usage, the demand for computer scientists has increased in popularity. Due to this fast-growing field, educational institutions and systems are increasing the amount of computer science courses offered in order to train more future computer scientists.
+
+These increases started at the college level, where majoring in computer science is now becoming a widely available option. At Macalester College, it is one of the largest departments for both students and faculty. While the availability of courses at the college level is a good start, there is a big push to have computer science courses offered in K-12 education. Offering computer science courses in elementary and secondary schools provides an opportunity for kids to expose themselves to coding, potentially leading to younger students discovering new interests and actively engaging with computer science earlier. Oftentimes, being exposed to computer science at a younger age can make students more comfortable with the material and the field later on, which can contribute to a more empowered and diverse set of students entering the workforce or higher education. Given the importance of having computer science courses available in K-12 education, we decided to investigate the availability of computer science courses in K-12 school districts in Minnesota. In this project, we explore the connection between a variety of data sets related to this topic, including K-12 computer science course availability in Minnesota, demographic information from the U.S. census, ACT scores, and school district financial information.
 
 To see our final product, visit: https://advanced-data-science-final-project.netlify.app
 
-# About the Datasets
+
+# About the Data Sets
 
 **Minnesota Common Course Catalogue**
 
-This data set is provided by the Minnesota State Department of Education and is available to the public. The Minnesota Common Course Catalogue (MCCC) presents information about all the courses that are offered across school districts in Minnesota. For our purposes, we are looking at subject area 10, computer and information sciences (K-12), and all categories and classifications. For each course classification, there is information about the district where it is taught, the region of the state, the local course title, whether it is an AP or IB course, if it fulfills a graduation requirement, among others. We joined this dataset with information about what category the course classification falls into, such as A - computer literacy, B - management information systems, or C - network systems. The final dataset has 1,602 computer and information classes taught across the state in K-12 education.
+This data set is provided by the Minnesota State Department of Education and is available to the public. The Minnesota Common Course Catalogue (MCCC) presents information about all the courses that are offered across school districts in Minnesota. For our purposes, we are looking at subject area 10, computer and information sciences (K-12), and all categories and classifications. For each course classification, there is information about the district where it is taught, the region of the state, the local course title, whether it is an AP or IB course, if it fulfills a graduation requirement, among others. We joined this data set with information about what category the course classification falls into, such as A - computer literacy, B - management information systems, or C - network systems. The final data set has 1,602 computer and information classes taught across the state in K-12 education.
 
 Link: https://public.education.mn.gov/MDEAnalytics/DataTopic.jsp?TOPICID=84
 
 
 **American Community Survey**
 
-We accessed the 2019 American Community Survey (ACS) from the tidycensus package in R. The ACS is an annual demographic survey from the U.S. Census Bureau. We used this data set to find by-district information about race, socioeconomic status, living environments, and other relevant variables for our analyses and visualizations. We hypothesized that computer science course availability would be connected to one or more of these variables, due to the trend where more computer science courses are offered in wealthier areas across the country that have more resources. We are using this dataset to further investigate that possibility.
+We accessed the 2019 American Community Survey (ACS) from the tidycensus package in R. The ACS is an annual demographic survey from the U.S. Census Bureau. We used this data set to find by-district information about race, socioeconomic status, living environments, and other relevant variables for our analyses and visualizations. We hypothesized that computer science course availability would be connected to one or more of these variables, due to the trend where more computer science courses are offered in wealthier areas across the country that have more resources. We are using this data set to further investigate that possibility.
 
 
 **ACT Data**
@@ -39,18 +42,19 @@ Link: https://public.education.mn.gov/MDEAnalytics/DataTopic.jsp?TOPICID=87
 
 **Annual Survey of School System Finances**
 
-Another important set of data that we used from the U.S. Census Bureau is the Annual Survey of School System Finances (ASSSF). This data contains information about 2018 financial activity of public elementary and secondary school systems for all states across the country. In particular, we were interested in discovering if funding, revenue, or spending for a district was correlated to availability of computer science courses. Due to the fact that public school funding often comes from income taxes, wealthier areas provide more funding to for their local schools.
+Another important set of data that we used from the U.S. Census Bureau is the Annual Survey of School System Finances (ASSSF). This data contains information about 2018 financial activity of public elementary and secondary school systems for all states across the country. In particular, we were interested in discovering if funding, revenue, or spending for a district was correlated to availability of computer science courses. Due to the fact that public school funding often comes from income taxes, wealthier areas provide more funding for their local schools.
 
 Link: https://www.census.gov/programs-surveys/school-finances.html
 
+
 **Minnesota School Districts**
 
-This data set includes the name of all school districts in Minnesota as well as their district numbers, which was created in 2015. This data came from the Minnesota State Department of Human Services. We joined the district numbers from this data set to the American Community Survey Data, which only had the district names. Accessing district numbers and names was integral in connecting our various datasets, because the common piece of information between our ideas is district information.
+This data set includes the name of all school districts in Minnesota as well as their district numbers, which was created in 2015. This data came from the Minnesota State Department of Human Services. We joined the district numbers from this data set to the American Community Survey data, which only had the district names. Accessing district numbers and names was integral in connecting our various data sets, because the common piece of information between our ideas is district information.
 
 Link: https://www.dhs.state.mn.us/main/groups/county_access/documents/pub/dhs16_193591.pdf
 
 
-# Important Packages and Datasets
+# Important Packages and Data Sets
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
@@ -72,7 +76,7 @@ library(gridExtra)
 library(plotly)
 ```
 
-**Load Datasets**
+**Load Data Sets**
 
 ```{r}
 act <- read_csv("act_data.csv") # ACT
@@ -81,11 +85,12 @@ course_catalog <- read_csv("course_catalog.csv") # MCCC
 ss <- readxl::read_excel("elsec18t.xls") # ASSSF
 ```
 
+
 # Data Cleaning
 
 **MCCC Data**
 
-The data from the Department of Education was neatly split into spreadsheets based on course classifications. In order to use this data more easily, we manually combined all the spreadsheets to have one, connected dataset with all the courses offered. We had to manually add in the categories of course classification and category in order to create one dataset. Furthermore, in order to be able to connect to the other datasets, we needed to have the district number as its own variable. In this dataset, the district name and number were combined as one variable, so we used regular expressions to split the name and number. This was fairly simple, due to the consistency in the district variable having the number as the last 7 digits.
+The data from the Department of Education was neatly split into spreadsheets based on course classifications. In order to use this data more easily, we manually combined all the spreadsheets to have one, connected data set with all the courses offered. We had to manually add in the categories of course classification and category in order to create one data set. Furthermore, in order to be able to connect to the other data sets, we needed to have the district number as its own variable. In this data set, the district name and number were combined as one variable, so we used regular expressions to split the name and number. This was fairly simple, due to the consistency in the district variable having the number as the last 7 digits.
 
 ```{r}
 course_catalog_predictors <-
@@ -97,10 +102,9 @@ course_catalog %>%
 ```
 
 
-
 **ACS Data**
 
-The ACS data was already in tidy format, which was convenient for our purposes. We focused on narrowing down variables to the ones that were important to our project and renaming them so that we could easily understand the meaning of the variable. Many of the districts had the word 'Minnesota' in it, so we removed that because all of our data is about Minnesota. Lastly, we altered the dataset to remove any NA values.
+The ACS data was already in tidy format, which was convenient for our purposes. We focused on narrowing down variables to the ones that were important to our project and renaming them so that we could easily understand the meaning of the variable. Many of the districts had the word 'Minnesota' in it, so we removed that because all of our data is about Minnesota. Lastly, we altered the data set to remove any NA values.
 
 ```{r}
 #census_api_key("key")
@@ -167,7 +171,7 @@ mn_2019_census_nogeom <- mn_2019_census %>%
 
 **ACT Data**
 
-To begin with, this dataset included a range of years, so we filtered the graduation year to our year of interest, which was 2018. This dataset also originally had extra variables that were irrelevant to our interests, so our cleaning process involved removing predictors so that we were only left with district name and average composite ACT score. The district name included the district number, so to create two separate values we used regular expressions. The district number was consistently located at the same spot in the name.
+To begin with, this data set included a range of years, so we filtered the graduation year to our year of interest, which was 2018. This data set also originally had extra variables that were irrelevant to our interests, so our cleaning process involved removing predictors so that we were only left with district name and average composite ACT score. The district name included the district number, so to create two separate values we used regular expressions. The district number was consistently located at the same spot in the name.
 
 ```{r}
 act_clean <-
@@ -198,9 +202,7 @@ act %>%
 
 **Annual Survey of School System Finances**
 
-Originally, this dataset includes information about all the states. Part of cleaning was filtering for just the state of Minnesota, since that is our target region.
-
-CHECK WITH THY
+Fortunately, we did not have to clean this data set. Originally, this data set included information about all the states, but the process of data joining narrowed down the data to just hold information about Minnesota. Below is code that allowed us to view the data entries related to Minnesota before going through the process of data joining.
 
 ```{r}
 ss %>%
@@ -214,15 +216,15 @@ ss %>%
 
 **Minnesota School Districts**
 
-This dataset originally had four categories, district name, district number, start date, and end date. To prepare this dataset we removed the start and end date variables. In order to join it with the ACS dataset, we had to compare the district names in both to ensure that they aligned. Only 16 district names didn't match, which was a small number, so we manually changed the district names to match the names in the ACS dataset.
+This data set originally had four categories, district name, district number, start date, and end date. To prepare this data set we removed the start and end date variables. In order to join it with the ACS data set, we had to compare the district names in both to ensure that they aligned. Only 16 district names didn't match, which was a small number, so we manually changed the district names to match the names in the ACS data set.
 
 
 # Data Joining
 
-Part of the work we did after finding, importing, and cleaning our various datasets was joining them together. An important piece for this was ensuring the district names and numbers aligned, and most of that was completed in the previous step. Here is our code for joining the datasets:
+Part of the work we did after finding, importing, and cleaning our various data sets was joining them together. An important piece for this was ensuring the district names and numbers aligned, and most of that was completed in the previous step. Here is our code for joining the data sets:
 
 ```{r}
-# read in datasets
+# read in data sets
 ## annual survey of school system finances (2018, national)
 ss <- readxl::read_excel("elsec18t.xls")
 
@@ -249,7 +251,7 @@ mn_acs <- mn_acs %>%
 mn_act <- read.csv("act_clean.csv")[-1] # remove the redundant index column created when reading by csv
 ```
 
-Join by NCES ID for school districts
+Join by NCES ID for school districts.
 
 ```{r}
 # look at this column from the school survey
@@ -273,14 +275,14 @@ mn_acs_ss <- mn_acs %>%
   left_join(ss, by = c("GEOID" = "NCESID"))
 ```
 
-Let's look at the name columns from the two datasets to verify that they point to the same district
+Let's look at the name columns from the two data sets to verify that they point to the same district.
 
 ```{r}
 mn_acs_ss %>%
   select(District, NAME)
 ```
 
-Now let's see which rows from the ACS and school survey didn't get a match
+Now let's see which rows from the ACS and school survey didn't get a match.
 
 ```{r}
 # ACS
@@ -293,12 +295,12 @@ ss %>%
   anti_join(mn_acs, by = c("NCESID" = "GEOID"))
 ```
 
-So only the row "Remainder of Minnesota" from the ACS didn't have a match, which makes perfect sense. There are 67 school districts from the school survey that did not join to the ACS, but perhaps they fall into the "Remainder of Minnesota" category. A lot of these districts also had 0 for enrollment.
+So only the row "Remainder of Minnesota" from the ACS didn't have a match, which is reasonable. There are 67 school districts from the school survey that did not join to the ACS, but perhaps they fall into the "Remainder of Minnesota" category. A lot of these districts also had 0 for enrollment.
 
-To join this dataset with the ACT data, we'll have to use the school district numbers as the ACT data does not contain the NCES ID.
+To join this data set with the ACT data, we'll have to use the school district numbers as the ACT data does not contain the NCES ID.
 
 ```{r}
-# look at this variable from each dataset to see their format
+# look at this variable from each data set to see their format
 mn_acs_ss %>%
   arrange(District.Nbr) %>%
   select(District.Nbr)
@@ -308,7 +310,7 @@ mn_act %>%
   select(Dist.Num)
 ```
 
-Seems like we're missing ACT scores for 11 school districts. Nevertheless the formats do match so let's join the datasets
+It appears that we're missing ACT scores for 11 school districts. Nevertheless, the formats do match so let's join the data sets.
 
 ```{r}
 mn_acs_ss_act <- mn_acs_ss %>%
@@ -316,7 +318,7 @@ mn_acs_ss_act <- mn_acs_ss %>%
   left_join(mn_act, by = c("District.Nbr" = "Dist.Num"))
 ```
 
-Finally before we export the data, we can remove the redundant names and ID columns from the school survey and ACT datasets as we'll stick to their format from the ACS
+Finally before we export the data, we can remove the redundant names and ID columns from the school survey and ACT data sets as we'll stick to their format from the ACS.
 
 ```{r}
 mn_acs_ss_act <- mn_acs_ss_act %>%
@@ -336,6 +338,7 @@ st_write(mn_acs_ss_act, "mn_acs_ss_act/mn_acs_ss_act.shp",
 ```
 
 Join with predictor data, replace all missing data from the course catalog with 0, and remove the redundant variable. This is the final step!
+
 ```{r}
 mn_acs_ss_act_pred <- mn_acs_ss_act %>%
   # mutate(District.Nbr = as.integer(District.Nbr)) %>% ## no longer necessary since they're already ints
@@ -345,11 +348,12 @@ mn_acs_ss_act_pred <- mn_acs_ss_act %>%
          NumCat = ifelse(is.na(NumCat), 0, NumCat)) 
 ```
 
+
 # Mapping and Shape Files
 
-While we had all the data necessary to create useful graphs and tables, one of our goals was to create visualizations and maps. Our data is focused on the state of Minnesota and all of it segmented by school districts, therefore we believed an interesting and informative way to present this data is with maps. The piece that was missing for us to accomplish this were the shape files for the districts. Shape files are notoriously tricky, and implementing this was a challenge.
+While we had all the data necessary to create useful graphs and tables, one of our goals was to create visualizations and maps. Our data is focused on the state of Minnesota and all of it is segmented by school districts, therefore we believed an interesting and informative way to present this data is with maps. The piece that was missing for us to accomplish this was the shape files for the districts. Shape files are notoriously tricky, and implementing this was a challenge.
 
-- why a challenge?
+Once we added a column for the geometry of each district (which was necessary for mapping), we could no longer use the write and read csv functions we were so accustomed to. Unfortunately, we found this out the hard way. When we exported our final data set using `write_csv()` and read it in another file with `read_csv()`, our data values were completely altered. We hypothesized that this could be due to how each geometry feature is saved as a list of coordinates separated by commas, which would interfere with the csv (comma-separated values) format. Fortunately, we quickly discovered that `st_write()` and `st_read()` from the `sf` package were the functions we needed to use instead. These were specifically made for exporting and importing files with simple geometry features. One issue we encountered with exporting shape files is that certain column names were abbreviated in the process. For example, `male_5to9` became `mal_5t9` and `total_pop` became `totl_pp`. As we could not detect any abbreviating pattern, we decided the simplest and fastest solution was to rename our variables back to their original names after we read in the data.
 
 ```{r}
 ##### RUN THIS CHUNK WHENEVER YOU READ IN THE DATA
@@ -373,7 +377,9 @@ names(mn_acs_ss_act_pred)[93] <- c("TotalClasses")
 
 # Visualizations and Plotly
 
-Although we knew our maps were sufficient, we wanted to add another element to our project. We decided to make the maps interactive and chose to use plotly to achieve this. The plotly functions had an issue with our final dataset and would not map unless we removed all rows with NA; converting the NA values to 0 did not fix the issue, and neither did converting the ‘N’ values we found in two variable columns to 0. In total, dropping the NA rows removed 11 districts. With more time this issue should be explored further. One thing that is important to note is that the districts that were not mapped still show interactivity based on whichever district is closest to the pointer.
+Although we knew our maps were sufficient, we wanted to add another element to our project. We decided to make the maps interactive and chose to use plotly to achieve this. The plotly functions had an issue with our final data set and would not map unless we removed all rows with NA; converting the NA values to 0 did not fix the issue, and neither did converting the ‘N’ values we found in two variable columns to 0. In total, dropping the NA rows removed 11 districts. With more time this issue should be explored further. One thing that is important to note is that the districts that were not mapped still show interactivity based on whichever district is closest to the pointer.
+
+Below we have two examples from our final product, one of a static graph and one of a plotly graph. Most of our visualizations and maps were built in the same way, so we did not include all of the visualization code in this document.
 
 **Static Graph**
 ```{r}
@@ -387,6 +393,7 @@ ggplot(mn_acs_ss_act_pred, aes(fill = total_pop)) +
         panel.background = element_rect(fill = "white"),
         plot.title = element_text(hjust = 0.5))
 ```
+
 
 **Plotly**
 ```{r}
@@ -409,7 +416,7 @@ ggplotly(
 
 # Modeling
 
-The goal of our model was to predict the number of computer science courses offered per district based on the variables from our ACS, ASSSF, and ACT data.
+The goal of our model was to predict the number of computer science courses offered per district in Minnesota based on the variables from our ACS, ASSSF, and ACT data.
 
 ```{r paged-table, echo=FALSE}
 library(knitr)
@@ -422,7 +429,7 @@ knit_print.data.frame <- function(x, ...) {
 registerS3method("knit_print", "data.frame", knit_print.data.frame)
 ```
 
-We first read in the data, cleaning up variable names as they were abbreviated once exported to shapefile format.
+We first read in the data, cleaning up variable names, as they were abbreviated once exported to shape file format.
 
 ```{r}
 # read in the data
@@ -441,6 +448,7 @@ names(mn)[1:28] <-
     "perc_house_units_w_mortgage", "perc_internet_subscription")
 names(mn)[93] <- c("TotalClasses")
 ```
+
 
 ### Data Exploration
 
@@ -477,7 +485,7 @@ mn %>%
              scales = "free")
 ```
 
-and now from the ACS and ACT data:
+Now from the ACS and ACT data:
 
 ```{r expl-cont-acs-act, fig.width=12, fig.height=8}
 mn %>%
@@ -513,6 +521,7 @@ mn <- mn %>%
   drop_na()
 ```
 
+
 ### Model Recipe
 
 ```{r include=FALSE}
@@ -522,11 +531,12 @@ set.seed(21)
 
 From our data exploration, these were the things we had to do in the recipe:
 
-* Log-transform most of the variables (except for the ones that start with PCT from the School Survey as they're percentages and PP as they're spending per pupil and not right-skewed)
-* Use percentages for ACS variables
-* Normalize all numerical variables
-* Ignore `PCTTOTA` and `LOCRPAR` as all variables have the same value
-* Make the ID variables evaluative (i.e. not included in modeling)
+* Log-transform most of the variables (except for the ones that start with PCT from the School Survey as they're percentages and PP as they're spending per pupil and not right-skewed).
+* Use percentages for ACS variables.
+* Normalize all numerical variables.
+* Ignore `PCTTOTA` and `LOCRPAR` as all variables have the same value.
+* Make the ID variables evaluative (i.e. not included in modeling).
+
 
 **Split data**
 
@@ -543,6 +553,7 @@ mn_testing <- testing(mn_split)
 # create cross-validation folds
 mn_cv <- vfold_cv(mn_training, v = 5)
 ```
+
 
 **Preprocess data**
 
@@ -592,13 +603,14 @@ mn_recipe <-
   step_normalize(all_predictors())
 ```
 
-And here is what the data looked like post-transformation:
+Here is what the data looked like post-transformation:
 
 ```{r}
 mn_recipe %>%
   prep(mn_training) %>%
   juice()
 ```
+
 
 ### Model Fitting
 
@@ -630,6 +642,7 @@ mn_lm_fit %>%
   tidy() %>% 
   mutate(across(where(is.numeric), ~round(.x,3))) 
 ```
+
 
 **LASSO**
 
@@ -692,6 +705,7 @@ mn_lasso_final_mod %>%
   filter(estimate != 0)
 ```
 
+
 **Random forest**
 
 Our last candidate was a random forest model.
@@ -733,7 +747,7 @@ mn_rf_test <-
   last_fit(mn_split)
 ```
 
-Of our three models, the random forest performed best, followed by LASSO and then regular linear regression.
+Of our three models, the random forest performed best, followed by LASSO, and then regular linear regression.
 
 ```{r}
 # collect metrics for model applied to test data
@@ -744,6 +758,7 @@ mn_lasso_test %>%
 mn_rf_test %>% 
   collect_metrics()
 ```
+
 
 **Residuals**
 
@@ -784,7 +799,7 @@ data.frame(lasso_mod_perf$measures)
 data.frame(rf_mod_perf$measures)
 ```
 
-and the distribution of the residuals:
+Here is the distribution of the residuals:
 
 ```{r}
 plot(lasso_mod_perf,
@@ -792,9 +807,10 @@ plot(lasso_mod_perf,
      geom = "boxplot")
 ```
 
+
 **Variable importance**
 
-In the end the random forest showed to greatly outperform the LASSO. Our final step was to look at the variable importance plot from this final model.
+In the end, the random forest showed to greatly outperform the LASSO. Our final step was to look at the variable importance plot from this final model.
 
 ```{r}
 set.seed(1) 
@@ -815,10 +831,10 @@ plot(rf_var_imp, show_boxplots = TRUE)
 
 # Implications
 
-The first thing that is critical to highlight is that correlation does not imply causation. Although this project looks at connections between various datasets and different variables, we are not suggesting that any of our predictors directly alter computer science course availability. It is possible, given the work that we have done, but without an experiment we cannot be certain about causation.
+One note that is critical to keep in mind is that correlation does not imply causation. Although this project looks at connections between various data sets and different variables, we are not suggesting that any of our predictors directly alters computer science course availability. It is possible that that is the case, given the work that we have done, but without an experiment or accounting for potential confounders (other variables that may affect the predictor and outcome variables), we cannot be certain about causation.
 
-Previous work does exist about how disparities in education are related to many of the variables we displayed in our project, such as household income and race. It is an intersectional issue that combines many layers of societal disparities. For instance, it has been proven that ACT and standardized test scores show more about family wealth and privilege than actual intelligence or likelihood for success. Therefore, it is logical that the same districts that have high average ACT scores will have high median household incomes. Due to the fact that computer science is a newer field, less work has been done specifically about this subject. The rise in availability in recent years has also been focused more on college and graduate school, leading to K-12 education to have received less attention.
+Previous work does exist about how disparities in education are related to many of the variables we displayed in our project, such as household income and race. For instance, it has been proven that ACT and standardized test scores show more about family wealth and privilege than actual intelligence or likelihood for success. Therefore, it is logical that the same districts that have high average ACT scores will have high median household incomes due to systemic inequality. Due to the fact that computer science is a newer field, less work has been done specifically about this subject. The rise in available literature on this subject in recent years has also been focused more on college and graduate school, with K-12 education receiving less attention.
 
-That being said, there are many nuances to this issue that we could not address within the scope of our project. One variable we looked at was race, and while the connection between race and educational disparities has been studied, that can be difficult to see in some of our work. We hypothesize that there are a few reasons for this. First, Minnesota in general is largely populated by White people. Furthermore, the place where there is the most diversity, near the Twin Cities, is also a place with considerable inequality. Without this information, it may seem as though there is correlation between greater diversity, higher median household income, and computer science course availability. However, we cannot make this claim without further investigating how the inequalities in each district play a role.
+That being said, there are many nuances to this issue of course availability and inequality that we could not address within the scope of our project. One variable we looked at was race, and while the connection between race and educational disparities has been studied, that can be difficult to see in some of our work. We hypothesize that there are a few reasons for this. First, Minnesota in general is largely populated by White people. Furthermore, the places with the most racial diversity (near the Twin Cities), are also places with considerable inequality. Without this information, it may seem as though there is correlation between greater diversity, higher median household income, and computer science course availability. However, we cannot make this claim without further investigating how the inequalities within each district play a role.
 
-Along with that, the population size of the districts could affect the outcomes. Districts can encompass many schools, and it is possible that within a district there is variation in the data. Future work might include investigating a smaller region to explore some of these nuances in order to better understand the connection between computer science course availability in K-12 education and our other variables.
+Along with that, the population size of the districts could affect the outcomes. Districts can encompass many schools, and it is possible that within a district there is variation in demographics and course availability. Future work might include investigating a smaller region to explore some of these nuances in order to better understand the connection between computer science course availability in K-12 education and our other variables.
